<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/img_newMedicine"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                app:srcCompat="@drawable/placeholder"/>

            <EditText
                android:id="@+id/editText_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_name"
                android:layout_alignStart="@+id/editText_name"
                android:layout_below="@+id/editText_name"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textColor="@color/grey_500"
                />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_newMedicine"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/grey_500"/>

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/editText_price"
                android:layout_alignRight="@+id/editText_price"
                android:layout_below="@+id/editText_price"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:textColor="@color/grey_500"/>

            <EditText
                android:id="@+id/editText_moreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_description"
                android:layout_alignStart="@+id/editText_description"
                android:layout_below="@+id/editText_description"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/more_info"
                android:inputType="textPersonName"
                android:textColor="@color/grey_500"/>

            <EditText
                android:id="@+id/editText_frequencyOfTaking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText_moreInfo"
                android:layout_alignStart="@+id/editText_moreInfo"
                android:layout_below="@+id/editText_moreInfo"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/how_many_times_a_day"
                android:inputType="textPersonName"
                android:textColor="@color/grey_500"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editText_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="45dp"
                android:text="@string/tap_to_change"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/textView"
                android:layout_below="@id/editText_frequencyOfTaking"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/confirm"/>

        </RelativeLayout>


    </ScrollView>

</layout>

