<resources>
    <string name="app_name">SmartDrugBox</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="title_activity_user_set_reminder">Set Reminder</string>
    <string name="view_medicine">View Medicine</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="off_alarm">Off Alarm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="on">On</string>
    <string name="drug_store">Drug Store</string>
    <string name="medicine">Medicine:</string>
    <string name="pill_number">Pill Number</string>
    <string name="confirm">Confirm</string>
    <string name="example_drugstore">ABC drugstore</string>
    <string name="example_medicine">ABC medicine</string>
    <string name="example_pill_number">5</string>
    <string name="frequency_of_taking">Frequency:</string>
    <string name="frequency_per_day">Frequency (Day)</string>
    <string name="interval">Interval</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compartment_number">Compartment Number</string>
    <string name="compartment">Compartment:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_catalogue">Edit Catalogue</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="login_as_pharmacy">Login As Pharmacy</string>
    <string name="login_as_user">Login As User</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="more_info">More Info</string>
    <string name="how_many_times_a_day">How many times a day ?</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="title_activity_add_medicine_box_details">AddMedicineBoxDetailsActivity</string>
    <string name="total_number_of_compartment">Total Number Of Compartment</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="edit_medicine">Edit Medicine</string>
    <string name="set_medicine">Set Medicine</string>

    <!--TODO: Read the data from database in the future-->
    <string-array name="compartmentNumberArray">
        <item>Compartment Number</item>
        <item>6</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_order_medicine">OrderMedicineActivity</string>
    <string name="address">Address</string>
    <string name="title_activity_p__view_medicine_order">P_ViewMedicineOrder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_order_queue">OrderQueueActivity</string>
    <string name="title_activity_message_queue">MessageQueueActivity</string>
    <string name="title_activity_u__message_queue">U_MessageQueueActivity</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
