<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main"
            />

        <Button
            android:id="@+id/btn_addMedicine"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_editCatalogue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/add_medicine"/>

        <Button
            android:id="@+id/btn_editCatalogue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_pharmacy"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/edit_catalogue"/>

        <ImageView
            android:id="@+id/img_pharmacy"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/pharmacy"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"/>


    </RelativeLayout>

</layout>
