...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/img_Medicine"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                app:srcCompat="@drawable/placeholder"/>
...
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="45dp"
                android:text="@string/tap_to_change"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textInputLayout_frequencyOfTaking"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/textInputLayout_frequencyOfTaking"
                android:text="@string/edit"/>
...
